# peal

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
.review/: history.jsonl  session.json
docs/: building.md  configuration.md  cursor-orchestrator-prd.md  implementation-plan.md  improvement-plan.md  plan-consecutive-failure-cap.md  plan-on-findings-remaining-default.md  plan-phase-3-retries.md  plan-phase3.md  plan-phase4.md  plan-phase5.md  plan-phase6.md  plan-phase7.md  plan-plan-file-error-message.md  plan-plan-text-sanity-check.md  plan-run-summary-exit-semantics.md  plan-stet-commands.md  review-quality.md  sp7.4-implementation-plan.md
scripts/: build-all-targets.sh
src/: cli.rs  config.rs  cursor.rs  error.rs  lib.rs  logging.rs  main.rs  phase.rs  plan.rs  plan_prompt.rs  prompt.rs  run_summary.rs  runner.rs  state.rs  stet.rs  subprocess.rs
