[package]
name = "peal"
version = "0.1.0"
edition = "2024"
description = "Plan-Execute-Address Loop: orchestrator that drives the Cursor CLI in three phases per task"
license = "MIT"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.5.60", features = ["derive"] }
thiserror = "2.0.18"

[dev-dependencies]
tempfile = "3.26.0"
