[package]
name = "peal"
version = "0.1.0"
edition = "2024"
description = "Plan-Execute-Address Loop: orchestrator that drives the Cursor CLI in three phases per task"
license = "MIT"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.5.60", features = ["derive"] }
regex = "1.12.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0.18"
toml = "0.8"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt", "json"] }

[dev-dependencies]
tempfile = "3.26.0"
